--- a/text/auditing.tex
+++ b/text/auditing.tex
@@ -32,23 +32,27 @@ Each validator shall perform auditing duties on each valid block received. Since
 
 We define the sequence of work-reports which we may be required to audit as $\mathbf{Q}$, a sequence of length equal to the number of cores, which functions as a mapping of core index to a work-report pending which has just become available, or $\none$ if no report became available on the core. Formally:
 \begin{align}\label{eq:auditselection}
-  \mathbf{Q} &\in \seq{\workreport?}_\corecount \\
-  \mathbf{Q} &\equiv \left[\begin{rcases}
-    \rho[c]_w &\when \rho[c]_w \in \mathbf{W} \\
-    \none &\otherwise
-  \end{rcases} \,\middle\vert\,c \orderedin \coreindex\right]
+  \mathbf{Q} &\in \seq{\optional{\workreport}}_\corecount \\
+  \mathbf{Q} &\equiv \sq{\build{
+    \begin{rcases}
+      \rho[c]_w &\when \rho[c]_w \in \mathbf{W} \\
+      \none &\otherwise
+    \end{rcases}
+  }{
+    c \orderedin \coreindex
+  }}
 \end{align}
 
 We define our initial audit tranche in terms of a verifiable random quantity $s_0$ created specifically for it:
 \begin{align}
-  s_0 &\in \bandersig{\activeset[v]_b}{\mathsf{X}_U \concat \banderout{\H_\¬vrfsig}}{[]} \\
+  s_0 &\in \bandersig{\activeset[v]_\vk¬bs}{\mathsf{X}_U \concat \banderout{\H_\¬vrfsig}}{[]} \\
   \mathsf{X}_U &= \token{\$jam\_audit}
 \end{align}
 
 We may then define $\mathbf{a}_0$ as the non-empty items to audit through a verifiably random selection of ten cores:
 \begin{align}
-  \mathbf{a}_0 &= \{\tup{c, w} \mid \tup{c, w} \in \mathbf{p}_{\dots+10}, w \ne \none\} \\
-  \where \mathbf{p} &= \mathcal{F}([\tup{c, \mathbf{Q}_c} \mid c \orderedin \coreindex], r) \\
+  \mathbf{a}_0 &= \set{\build{\tup{c, w}}{\tup{c, w} \in \mathbf{p}_{\dots+10}, w \ne \none}} \\
+  \where \mathbf{p} &= \Ffyshuffle{\sq{\build{\tup{c, \mathbf{Q}_c}}{c \orderedin \coreindex}}, r} \\
   \also r &= \banderout{s_0}
 \end{align}
 
@@ -63,8 +67,8 @@ In all cases, we publish a signed statement of which of the cores we believe we 
 
 Formally, for each tranche $n$ we ensure the announcement statement is published and distributed to all other validators along with our validator index $v$, evidence $s_n$ and all signed data. Validator's announcement statements must be in the set $S$:
 \begin{align}
-  S &\equiv \sig{\activeset[v]_e}{\mathsf{X}_I \doubleplus n \concat \mathbf{x}_n \concat \blake(\H)} \\
-  \where \mathbf{x}_n &= \se([\se_2(c) \frown \blake(w) \mid \tup{c, w} \in \mathbf{a}_n])\\
+  S &\equiv \sig{\activeset[v]_\vk¬ed}{\mathsf{X}_I \append n \concat \mathbf{x}_n \concat \blake(\H)} \\
+  \where \mathbf{x}_n &= \se([\se_2(c) \concat \blake(w) \mid \tup{c, w} \in \mathbf{a}_n])\\
   \mathsf{X}_I &= \token{\$jam\_announce}
 \end{align}
 
@@ -84,7 +88,7 @@ We are able to define $\mathbf{a}_n$ for tranches beyond the first on the basis 
 We can thus define $\mathbf{a}_n$ beyond the initial tranche through a new \textsc{vrf} which acts upon the set of \emph{no-show} validators.
 \begin{align}
   \nonumber\forall n > 0:&\\
-  \ s_n(w) &\in \bandersig{\activeset[v]_b}{\mathsf{X}_U \concat \banderout{\H_\¬vrfsig}\concat\blake(w)\doubleplus n}{[]} \\
+  \ s_n(w) &\in \bandersig{\activeset[v]_\vk¬bs}{\mathsf{X}_U \concat \banderout{\H_\¬vrfsig}\concat\blake(w)\append n}{[]} \\
   \ \mathbf{a}_n &\equiv \{ \textstyle\frac{\valcount}{256\mathsf{F}}\banderout{s_n(w)}_0 < m_n \mid w \in \mathbf{Q}, w \ne \none \}\!\!\!\!\\
   \nonumber \where m_n &= |A_{n - 1}(w) \setminus J_\top(w)|
 \end{align}
@@ -118,7 +122,7 @@ Note that a failure to decode implies an invalid work-report.
 
 From this mapping the validator issues a set of judgments $\mathbf{j}_n$:
 \begin{align}
-  \mathbf{j}_n &= \{ \mathcal{S}_{\activeset[v]_e}(\mathsf{X}_{e(w)} \concat \blake(w)) \mid (c, w) \in \mathbf{a}_n \}
+  \mathbf{j}_n &= \set{\build{\signdata{\activeset[v]_\vk¬ed}{\mathsf{X}_{e(w)} \concat \blake(w)}}{(c, w) \in \mathbf{a}_n}}
 \end{align}
 
 %We denote the guarantors of a work-package $w$ as $\mathbf{G}(w)$ from a particular chain head, and this may be derived from the guarantees extrinsic $\xtguarantees$ of the ancestor block which introduced the work-report. Our restrictions on the guarantees extrinsic (described in section \ref{sec:accumulation}) ensures that this is unique.
