--- a/text/accumulation.tex
+++ b/text/accumulation.tex
@@ -38,7 +38,7 @@ The newly available work-reports, $\mathbf{W}$, are partitioned into two sequenc
     w \orderedin \mathbf{W},
     |(w_x)_\mathbf{p}| > 0 \vee w_\wr¬srlookup \ne \{\}
   }, \accumulatedcup)\!\!\!\!\\
-  D(w) &\equiv (w, \{(w_x)_\mathbf{p}\} \cup \keys{w_\wr¬srlookup})
+  D(w) &\equiv (w, \{(w_x)_\mathbf{p}\} \cup \Fkeys{w_\wr¬srlookup})
 \end{align}
 
 We define the queue-editing function $E$, which is essentially a mutator function for items such as those of $\ready$, parameterized by sets of now-accumulated work-package hashes (those in $\accumulated$). It is used to update queues of work-reports when some of them are accumulated. Functionally, it removes all entries whose work-report's hash is in the set provided as a parameter, and removes any dependencies which appear in said set. Formally:
@@ -62,7 +62,7 @@ We further define the accumulation priority queue function $Q$, which provides t
     &\seq{(\workreport, \{\hash\})} \to \seq{\workreport} \\
     &\mathbf{r} \mapsto \begin{cases}
       [] &\when \mathbf{g} = [] \\
-      \mathbf{g} \frown Q(E(\mathbf{r}, \srmap(\mathbf{g})))\!\!\!\! &\otherwise \\
+      \mathbf{g} \concat Q(E(\mathbf{r}, \srmap(\mathbf{g})))\!\!\!\! &\otherwise \\
       \multicolumn{2}{l}{\,\where \mathbf{g} = [w \mid (w, \{\}) \orderedin \mathbf{r}]}
     \end{cases}
   \end{aligned}\right.
@@ -79,7 +79,7 @@ Finally, we define the mapping function $\srmap$ which extracts the correspondin
 We may now define the sequence of accumulatable work-reports in this block as $\mathbf{W}^*$:
 \begin{align}
   \using m &= \H_\¬timeslot \bmod \mathsf{E}\\
-  \mathbf{W}^* &\equiv \mathbf{W}^! \frown Q(\mathbf{q}) \\
+  \mathbf{W}^* &\equiv \mathbf{W}^! \concat Q(\mathbf{q}) \\
   \quad\where \mathbf{q} &= E(\wideparen{\ready_{m\dots}} \concat \wideparen{\ready_{\dots m}} \concat \mathbf{W}^Q, \srmap(\mathbf{W}^!))
 \end{align}
 
@@ -148,7 +148,7 @@ We come to define the parallelized accumulation function $\Delta_*$ which, with 
     &(\mathbf{o}, \mathbf{w}, \mathbf{f}) \mapsto ((\mathbf{d}', \mathbf{i}', \mathbf{q}', m', \mathbf{a}', v', \mathbf{z}'), \wideparen{\mathbf{t}}, \mathbf{b}, \mathbf{u})\!\!\!\!\!\!\\
     &\text{where:}\\
     &\ \begin{aligned}
-      \mathbf{s} &= \{ \mathbf{r}_s \mid w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} \} \cup \keys{\mathbf{f}} \\
+      \mathbf{s} &= \{ \mathbf{r}_s \mid w \in \mathbf{w}, \mathbf{r} \in w_\mathbf{r} \} \cup \Fkeys{\mathbf{f}} \\
       \mathbf{u} &= [(s, \Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_u) \mid s \orderedin \mathbf{s}] \\
       \mathbf{b} &= \{ (s, b) \mid s \in \mathbf{s},\, b = \Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_b,\, b \ne \none \} \\
       \mathbf{t} &= [\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{t} \mid s \orderedin \mathbf{s}] \\
@@ -159,8 +159,8 @@ We come to define the parallelized accumulation function $\Delta_*$ which, with 
       v' &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, v^*)_\mathbf{o})_v \\
       \mathbf{i}' &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, v)_\mathbf{o})_\mathbf{i} \\
       \forall c \in \coreindex : \mathbf{q}'_c &= (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, \mathbf{a}_c)_\mathbf{o})_\mathbf{q} \\
-      \mathbf{n} &= \bigcup_{s \in \mathbf{s}}(\{ (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d} \setminus \keys{\mathbf{d} \setminus \{s\}} \}) \\
-      \mathbf{m} &= \bigcup_{s \in \mathbf{s}}(\keys{\mathbf{d}} \setminus \keys{(\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d}})
+      \mathbf{n} &= \bigcup_{s \in \mathbf{s}}(\{ (\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d} \setminus \Fkeys{\mathbf{d} \setminus \{s\}} \}) \\
+      \mathbf{m} &= \bigcup_{s \in \mathbf{s}}(\Fkeys{\mathbf{d}} \setminus \Fkeys{(\Delta_1(\mathbf{o}, \mathbf{w}, \mathbf{f}, s)_\mathbf{o})_\mathbf{d}})
     \end{aligned}
   \end{aligned}\right.
 \end{equation}
@@ -171,13 +171,13 @@ And $\fnprovide$ is the preimage integration function, which transforms a dictio
     &(\dict{\N_S}{\serviceaccount}, \{\tup{\N_S, \blob}\}) \to \dict{\N_S}{\serviceaccount} \\
     &(\mathbf{d}, \mathbf{p}) \mapsto \mathbf{d}'\;\where \mathbf{d}' = \mathbf{d}\;\text{except:} \\
     &\quad\forall \tup{s, \mathbf{i}} \in \mathbf{p},\;
-      s \in \keys{\mathbf{d}},\;
+      s \in \Fkeys{\mathbf{d}},\;
       \mathbf{d}[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \sq{}:\\
     &\qquad \mathbf{d}'[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = [\thetime']\\
     &\qquad \mathbf{d}'[s]_\mathbf{p}[\blake(\mathbf{i})] = \mathbf{i}
     %\begin{aligned}
     %  \tup{s, \mathbf{i}} \in \mathbf{p} \wedge
-    %  s \in \keys{\mathbf{d}}\;\wedge& \\
+    %  s \in \Fkeys{\mathbf{d}}\;\wedge& \\
     %  \mathbf{d}[s]_\mathbf{l}[\blake(\mathbf{i}), \len{\mathbf{i}}] = \sq{}&
     %\end{aligned} &\Rightarrow
     %\begin{aligned}
@@ -187,7 +187,7 @@ And $\fnprovide$ is the preimage integration function, which transforms a dictio
   \end{aligned}\right.
 \end{equation}
 
-We note that while forming the union of all altered, newly added service and newly removed indices, defined in the above context as $\keys{\mathbf{n}} \cup \mathbf{m}$, different services may not each contribute the same index for a new, altered or removed service. This cannot happen for the set of removed and altered services since the code hash of removable services has no known preimage and thus cannot execute itself to make an alteration. For new services this should also never happen since new indices are explicitly selected to avoid such conflicts. In the unlikely event it does happen, the block must be considered invalid.
+We note that while forming the union of all altered, newly added service and newly removed indices, defined in the above context as $\Fkeys{\mathbf{n}} \cup \mathbf{m}$, different services may not each contribute the same index for a new, altered or removed service. This cannot happen for the set of removed and altered services since the code hash of removable services has no known preimage and thus cannot execute itself to make an alteration. For new services this should also never happen since new indices are explicitly selected to avoid such conflicts. In the unlikely event it does happen, the block must be considered invalid.
 
 The single-service accumulation function, $\Delta_1$, transforms an initial state-context, sequence of work-reports and a service index into an alterations state-context, a sequence of \emph{transfers}, a possible accumulation-output and the actual \textsc{pvm} gas used. This function wrangles the work-items of a particular service from a set of work-reports and invokes \textsc{pvm} execution with said data:
 \begin{equation}
@@ -251,7 +251,7 @@ This introduces $\operandtuple$, the set of wrangled \emph{operand tuples}, used
 
 Given the result of the top-level $\Delta_+$, we may define the posterior state $\privileges'$, $\varphi'$ and $\stagingset'$ as well as the first intermediate state of the service-accounts $\accountspostacc$ and the Accumulation Output Log $\lastaccout'$:
 \begin{align}
-  \using &g = \max\left(\mathsf{G}_T, \mathsf{G}_A\cdot \corecount + \textstyle \sum_{x \in \mathcal{V}(\alwaysaccers)}(x)\right)\\
+  \using &g = \max\left(\mathsf{G}_T, \mathsf{G}_A\cdot \corecount + \textstyle \sum_{x \in \Fvalues{\alwaysaccers}}(x)\right)\\
   \also &\mathbf{o} = (\accountspre, \stagingset, \varphi, \manager, \assigners, \delegator, \alwaysaccers) \\
   &(n, \mathbf{o}', \mathbf{t}, \lastaccout', \mathbf{u}) \equiv
     \Delta_+(g, \mathbf{W}^*, \mathbf{o}, \alwaysaccers) \\
@@ -282,7 +282,7 @@ The second intermediate state $\accountspostxfer$ may then be defined with all t
   \mathbf{x} &= \{ s \mapsto \Psi_T(\accountspostacc, \thetime', s, \selectxfers(s)) \mid (s \mapsto a) \in \accountspostacc \} \\
   \accountspostxfer &\equiv \left\{ s \mapsto a' \;\middle\mid\; (s \mapsto \tup{a, u}) \in \mathbf{x} \right\} \\
   &\where a' = \begin{cases}
-    a \exc a'_a = \thetime' &\when s \in \keys{\mathbf{I}} \\
+    a \exc a'_a = \thetime' &\when s \in \Fkeys{\mathbf{I}} \\
     a &\otherwise
   \end{cases}
 \end{align}
@@ -303,10 +303,10 @@ We define the final state of the ready queue and the accumulated map by integrat
 \begin{align}
   \accumulated'_{\mathsf{E} - 1} &= \srmap(\mathbf{W}^*_{\dots n}) \\
   \forall i \in \N_\mathsf{E - 1}: \accumulated'_{i} &\equiv \accumulated_{i + 1} \\
-  \forall i \in \N_\mathsf{E} : \ready'^\circlearrowleft_{m - i} &\equiv \begin{cases}
+  \forall i \in \N_\mathsf{E} : \cyclic{\ready'}_{m - i} &\equiv \begin{cases}
     E(\mathbf{W}^Q, \accumulated'_{\mathsf{E} - 1}) &\when i = 0 \\
     [] &\when 1 \le i < \thetime' - \thetime \\
-    E(\ready^\circlearrowleft_{m - i}, \accumulated'_{\mathsf{E} - 1}) &\when i \ge \thetime' - \thetime
+    E(\cyclic{\ready}_{m - i}, \accumulated'_{\mathsf{E} - 1}) &\when i \ge \thetime' - \thetime
   \end{cases}
 \end{align}
 
