--- a/text/statistics.tex
+++ b/text/statistics.tex
@@ -51,7 +51,7 @@ The objective statistics are updated in line with their description, formally:
             0 &\otherwise
         \end{cases}\\
         \pi'_V[v]_d &\equiv \mathbf{a}[v]_d + \begin{cases}
-            \sum_{d \in \xtpreimages}|d| &\when v = \H_\¬authorindex \\
+            \sum_{d \in \xtpreimages}\len{d} &\when v = \H_\¬authorindex \\
             0 &\otherwise
         \end{cases}\\
         \pi'_V[v]_g &\equiv \mathbf{a}[v]_g + (\activeset'_v \in \mathbf{R})\\
@@ -125,7 +125,7 @@ Finally, the service statistics are updated using the same intermediate values a
       \is{t&}{\span\span \subifnone(\mathbf{X}[s], \tup{0, 0})} \quad\\
     \end{alignedat}
   }\!\!\!\!\\
-  \where \mathbf{s} &= \mathbf{r} \cup \mathbf{p} \cup \keys{\mathbf{I}} \cup \keys{\mathbf{X}}\\
+  \where \mathbf{s} &= \mathbf{r} \cup \mathbf{p} \cup \Fkeys{\mathbf{I}} \cup \Fkeys{\mathbf{X}}\\
   \also \mathbf{r} &= \{r_s \mid r \in w_\mathbf{r}, w \in \mathbf{w} \}\\
   \also \mathbf{p} &= \{s \mid \exists x: \tup{s, x} \in \mathbf{E}_P \}\\
   \also R(s \in \N_S) &\equiv \!\!\!\!\!\!\!\!\!\!\!
