--- a/text/work_packages_and_reports.tex
+++ b/text/work_packages_and_reports.tex
@@ -167,9 +167,9 @@ We define the paged-proofs function $\pagedproofs$ which accepts a series of exp
   \!\!\pagedproofs\colon\left\{\begin{aligned}
     \seq{\G} \to \,&\seq{\G} \\
     \mathbf{s} \mapsto \,&\sq{
-      \mathcal{P}_l(\se(
-        \var{\mathcal{J}_6(\mathbf{s}, i)},
-        \var{\mathcal{L}_6(\mathbf{s}, i)}
+      \zeropad_l(\se(
+        \var{\merklejustsubpath_6(\mathbf{s}, i)},
+        \var{\merklesubtreepage_6(\mathbf{s}, i)}
       ))
       \mid i \orderedin \N_{\ceil{\nicefrac{\len{\mathbf{s}}}{64}}}
     } \\
@@ -193,7 +193,7 @@ We now come to the work-report computation function $\Xi$. This forms the basis 
 
 Where:
 \begin{align*}
-  \keys{\wr¬srlookup} \equiv \,&\{ h \mid \wiX \in \wpX_\mathbf{w}, (h^\boxplus, n) \in \wiX_\mathbf{i} \} \ ,\quad\len{\wr¬srlookup} \le 8\\
+  \Fkeys{\wr¬srlookup} \equiv \,&\{ h \mid \wiX \in \wpX_\mathbf{w}, (h^\boxplus, n) \in \wiX_\mathbf{i} \} \ ,\quad\len{\wr¬srlookup} \le 8\\
   (\wr¬authtrace, \wr¬authgasused) = \,&\Psi_I(\wpX, \¬core) \\
   (\wr¬digests, \allexports) = \,&\transpose[
     (\itemtodigest(\wpX_\wp¬workitems[j], r, u), \mathbf{e})
@@ -202,7 +202,7 @@ Where:
     j \orderedin \N_{\len{\wpX_\wp¬workitems}}
   ] \\
   \countupexports(\wpX, j) \equiv \,&\begin{cases}
-    (\oversize, u, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\when |r| + z > \mathsf{W}_R\\
+    (\oversize, u, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\when \len{r} + z > \mathsf{W}_R\\
     (\badexports, u, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\otherwhen \len{\mathbf{e}} \ne w_e \\
     (r, u, [\mathbb{G}_0, \mathbb{G}_0, \dots]_{\dots w_e}) &\otherwhen r \not\in \blob \\
     (r, u, \mathbf{e}) &\otherwise \\
@@ -210,7 +210,7 @@ Where:
       j, \wpX, \mathbf{o}, [\importsegmentdata(w) \mid w \orderedin \wpX_\wp¬workitems], \ell
     )}\\
     \multicolumn{2}{l}{\also h = \blake(\wpX)\,,\; w = \wpX_\wp¬workitems[j]\,,\; \ell = \sum_{k < j}\wpX_\wp¬workitems[k]_\wi¬exportcount}\\
-    \multicolumn{2}{l}{\also z = \len{\mathbf{o}} + \sum_{k < j, (r \in \blob, \dots) = I(p, k)} |r|}
+    \multicolumn{2}{l}{\also z = \len{\mathbf{o}} + \sum_{k < j, (r \in \blob, \dots) = I(p, k)} \len{r}}
   \end{cases}
 \end{align*}
 
@@ -222,7 +222,7 @@ Initially we constrain the segment-root dictionary $\wr¬srlookup$: It should co
 
 We immediately define the segment-root lookup function $\segrootlookup$, dependent on this dictionary, which collapses a union of segment-roots and work-package hashes into segment-roots using the dictionary:
 \begin{equation}
-  \segrootlookup(r \in \hash\cup\hash^\boxplus) \equiv \begin{cases}
+  \segrootlookup(r \in \hash \cup \hash^\boxplus) \equiv \begin{cases}
     r &\when r \in \hash \\
     \wr¬srlookup[h] &\when \exists h \in \hash: r = h^\boxplus
   \end{cases}
@@ -240,9 +240,9 @@ The next term to be introduced, $\tup{\wr¬authtrace, \wr¬authgasused}$, is the
 The above relies on two functions, $\importsegmentdata$ and $\extrinsicdata$ which, respectively, define the import segment data and the extrinsic data for some work-item argument $\wiX$. We also define $\justifysegmentdata$, which compiles justifications of segment data:
 \begin{equation}
   \begin{aligned}
-    \extrinsicdata(\wiX \in \workitem) &\equiv [\mathbf{d} \mid (\blake(\mathbf{d}), \len{\mathbf{d}}) \orderedin \wiX_\wi¬extrinsics] \\
-    \importsegmentdata(\wiX \in \workitem) &\equiv [\segsX[n] \mid \mathcal{M}(\segsX) = \segrootlookup(r), (r, n) \orderedin \wiX_\wi¬importsegments] \\
-    \justifysegmentdata(\wiX \in \workitem) &\equiv [\var{\mathcal{J}_0(\segsX, n)} \mid \mathcal{M}(\segsX) = \segrootlookup(r), (r, n) \orderedin \wiX_\wi¬importsegments]
+    \extrinsicdata(\wiX \in \workitem) &\equiv \sq{\build{\mathbf{d}}{(\blake(\mathbf{d}), \len{\mathbf{d}}) \orderedin \wiX_\wi¬extrinsics}} \\
+    \importsegmentdata(\wiX \in \workitem) &\equiv \sq{\build{\segsX[n]}{\merklizecd(\segsX) = \segrootlookup(r), (r, n) \orderedin \wiX_\wi¬importsegments}} \\
+    \justifysegmentdata(\wiX \in \workitem) &\equiv \sq{\build{\var{\merklejustsubpath_0(\segsX, n)}}{\merklizecd(\segsX) = \segrootlookup(r), (r, n) \orderedin \wiX_\wi¬importsegments}}
   \end{aligned}
 \end{equation}
 
@@ -281,30 +281,30 @@ We define the availability specifier function $\newavailabilityspecifier$, which
       h,\,
       \is{l}{\len{\mathbf{b}}},\,
       u,\,
-      \is{e}{\mathcal{M}(\mathbf{s})},\,
+      \is{e}{\merklizecd(\mathbf{s})},\,
       \is{n}{\len{\mathbf{s}}}
     }
   \end{aligned}\right.\!\!\!\!\!
 \end{equation}
 \begin{align*}
-  \where u &= \mathcal{M}_B(
+  \where u &= \merklizewb(
     [\wideparen{\mathbf{x}} \mid \mathbf{x} \orderedin \transpose[\mathbf{b}^\clubsuit, \mathbf{s}^\clubsuit]]
   )\\
-  \also \mathbf{b}^\clubsuit &= \blake^\#(\mathcal{C}_{\ceil{\nicefrac{\len{\mathbf{b}}}{\mathsf{W}_E}}}(\mathcal{P}_{\mathsf{W}_E}(\mathbf{b})))\\
-  \also \mathbf{s}^\clubsuit &= \mathcal{M}_B^\#(\transpose\mathcal{C}^\#_6(\mathbf{s} \concat \pagedproofs(\mathbf{s})))
+  \also \mathbf{b}^\clubsuit &= \blake^\#(\Ferasurecode[\ceil{\nicefrac{\len{\mathbf{b}}}{\mathsf{W}_E}}]{\zeropad_{\mathsf{W}_E}(\mathbf{b})})\\
+  \also \mathbf{s}^\clubsuit &= \merklizewb^\#(\transpose\Ferasurecodeplex[6]{\mathbf{s} \concat \pagedproofs(\mathbf{s})})
 \end{align*}
 
 % TODO: \avspec_h is now the hash of the work-package bundle, not the work-package itself. This is a change from the original document... does anything break with it?
 
 The paged-proofs function $\pagedproofs$, defined earlier in equation \ref{eq:pagedproofs}, accepts a sequence of segments and returns a sequence of paged-proofs sufficient to justify the correctness of every segment. There are exactly $\ceil{\nicefrac{1}{64}}$ paged-proof segments as the number of yielded segments, each composed of a page of 64 hashes of segments, together with a Merkle proof from the root to the subtree-root which includes those 64 segments.
 
-The functions $\mathcal{M}$ and $\mathcal{M}_B$ are the fixed-depth and simple binary Merkle root functions, defined in equations \ref{eq:constantdepthmerkleroot} and \ref{eq:simplemerkleroot}. The function $\mathcal{C}$ is the erasure-coding function, defined in appendix \ref{sec:erasurecoding}.
+The functions $\merklizecd$ and $\merklizewb$ are the fixed-depth and simple binary Merkle root functions, defined in equations \ref{eq:constantdepthmerkleroot} and \ref{eq:simplemerkleroot}. The function $\erasurecode$ is the erasure-coding function, defined in appendix \ref{sec:erasurecoding}.
 
-And $\mathcal{P}$ is the zero-padding function to take an octet array to some multiple of $n$ in length:
+And $\zeropad$ is the zero-padding function to take an octet array to some multiple of $n$ in length:
 \begin{equation}\label{eq:zeropadding}
-  \mathcal{P}_{n \in \N_{1\dots}}\colon\left\{\begin{aligned}
-    \blob &\to \blob_{k\cdot n}\\
-    \mathbf{x} &\mapsto \mathbf{x} \concat [0, 0, ...]_{((|x|+n - 1) \bmod n) + 1 \dots n}
+  \zeropad_{n \in \N_{1\dots}}\colon\left\{\begin{aligned}
+    \blob &\to \blob_{k \cdot n}\\
+    \mathbf{x} &\mapsto \mathbf{x} \concat [0, 0, ...]_{((\len{x} + n - 1) \bmod n) + 1 \dots n}
   \end{aligned}\right.
 \end{equation}
 
